@@ -98,6 +98,9 @@ color: #fff;
 .not_ok_light { background-color:#f99 }
 .opt_not_ok { background-color:#f80 }
 .opt_not_ok_light { background-color:#fd8 }
+.exp_not_ok { background-color:#fa5 }
+.exp_not_ok_light { background-color:#fd8 }
+
 
 ul#indicators li {
  display: inline;
@@ -107,6 +110,11 @@ ul#indicators li:before {
 }
 ul#indicators li:first-child:before {
  content: '';
+}
+
+a.dragon, a:link.dragon, a:visited.dragon       {
+text-decoration:none;
+color:#f00;
 }
 
 
