@@ -41,5 +41,27 @@
 [% END %]
 [% END %]
 
+[% IF show_experimental %]
+<tr><td colspan=3><br><b>Experimental Metrics</b></td></tr>
+[% FOREACH c IN mck.experimental_indicator_names %]
+[% class = item.$c ? 'ok' : 'exp_not_ok' %]
+<tr>
+    <td class="[% class %]"><b><a name="[%c%]"></a>[% c %]</b></td>
+     <td class="[% class %]" align="center">
+[% IF item.$c %]
+   ok</td></tr>
+[% ELSE %]
+    not&nbsp;ok</td></tr>
+    <tr><td class="[% class %]_light" valign="top" align="right">Error:</td><td colspan=2>[% indicators.$c.error %]</td></tr>
+    <tr><td class="[% class %]_light" valign="top" align="right">Remedy:</td><td colspan=2>[% indicators.$c.remedy %]</td></tr>
+    [% IF dist.error.$c %]
+    <tr><td class="[% class %]_light" valign="top" align="right">Error Message:</td><td colspan=2>[% dist.error.$c %]</td></tr>
+    [% END %]
+[% END %]
+[% END %]
+[% END %]
+
+
+
 </table>
 
